--- a/config/config.yaml
+++ b/config/config.yaml
@@ -41,6 +41,7 @@ default:
             deadfactor: 5
             buffer_size: 256000
             responder_port: 'default'
+            frame_output_port: 3076
             rcf:
                 inst_id: sagr=LSE-SSC.spack=Test.rsl-fg=1.rcf=onlc2
                 hostnames:
