--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,54 @@
 # Distribution / Packaging / Build files
-.coverage
+.coverage*
 doc/build/*
+doc/source/ait.core.test*
+doc/source/ait.core.server.test*
+build/lib/*
 *.egg-info/
 *.egg
-build/
+.tox
+dist/
 
 # Object Files
 *.o
 *.pkl
 *.pyc
 
+# Libraries
+*.lib
+*.a
+
+# Log Files
+bliss-logmsgs-*.txt
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# LaTeX / PDF Documentation
+src/doc/dict/cmd/*.aux
+src/doc/dict/cmd/*.log
+src/doc/dict/cmd/*.out
+src/doc/dict/cmd/*.toc
+src/doc/dict/cmd/*.pdf
+src/doc/dict/cmd/cmddict-07-cmddefs.tex
+
 # Temporary files
 *~
+tags*
+
+# Unignore (hack)
+!build/clean.py
 
 # Nosetests ouptut file
 nosetests.xml
 
 # Macintosh file
 *.DS_Store
-
-# JetBrains .idea folder
-.idea
